--- a/TrippyApplication/src/main/resources/application.properties
+++ b/TrippyApplication/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.profiles.active=postgre
 logging.level.root=WARN
 logging.level.com.diyanamancheva.=INFO
 logging.level.com.diyanamancheva.city=DEBUG
-logging.file.name=logs/log.log
+logging.file.name=log/log.log
 logging.pattern.file="%d{dd-MM-yyyy HH:mm:ss} [%thread] %-5level %logger{36}.%M - %msg%n"
