Change database name

--- a/TrippyApplication/src/main/resources/application-postgre.properties
+++ b/TrippyApplication/src/main/resources/application-postgre.properties
@@ -1,4 +1,4 @@
-url =jdbc:postgresql://localhost:5432/MidTermTrippy?currentSchema=public
+url =jdbc:postgresql://localhost:5432/TrippyApplication?currentSchema=public
 user =postgres
 password =St713201
 cache_prepared_statements =true
