Switch to using Hibernate

--- a/TrippyApplication/src/main/resources/application.properties
+++ b/TrippyApplication/src/main/resources/application.properties
@@ -4,3 +4,8 @@ logging.level.com.diyanamancheva.=INFO
 logging.level.com.diyanamancheva.city=DEBUG
 logging.file.name=log/log.log
 logging.pattern.file="%d{dd-MM-yyyy HH:mm:ss} [%thread] %-5level %logger{36}.%M - %msg%n"
+spring.datasource.url = jdbc:postgresql://localhost:5432/TrippyApplication?currentSchema=public
+spring.datasource.username = postgres
+spring.datasource.password = St713201
+spring.jpa.hibernate.ddlAuto = none
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
